  * Remove hsa offload packaging bits.
  * For LTO builds, configure with --enable-link-serialization instead of
    --enable-link-mutex.
  * Package additional gnat files.
  * Update the gm2 packaging.
  * Add conflicts with binary packages built from gcc-10.
  * Build libhwasan (AArch64 only).
  * Don't configure with --enable-checking=extra,rtl on 32bit archs.

 -- Matthias Klose <doko@debian.org>  Thu, 26 Nov 2020 13:41:11 +0100

gcc-10 (10.2.0-17) unstable; urgency=medium

  * Update to git 20201111 from the gcc-10 branch.
    - Fix PR tree-optimization/97764, PR target/97685 (x86),
      PR target/97360 (PPC), PR lto/97508, PR c++/97412, PR fortran/97652,
      PR fortran/92793, PR fortran/92793, PR target/85486, PR libstdc++/96269,
      PR libstdc++/97731, PR libstdc++/97362, PR libstdc++/92285.

 -- Matthias Klose <doko@debian.org>  Wed, 11 Nov 2020 17:50:04 +0100

gcc-10 (10.2.0-16) unstable; urgency=medium

  * Update to git 20201029 from the gcc-10 branch.
    - Fix PR rtl-optimization/97439, PR target/96759 (RISCV),
      PR target/97506 (x86), PR target/97327 (ARM), PR target/96914 (ARM),
      PR target/96914 (ARM), PR target/96914 (ARM), PR rtl-optimization/97386,
      PR sanitizer/97294, PR target/97291 (ARM), PR ipa/96394, PR ipa/97404,
      PR ipa/97295, PR target/97251 (ARM), PR target/97349 (AArch64),
      PR tree-optimization/97357, PR tree-optimization/97255, PR c++/97197,
      PR c++/97328, PR c++/97010, PR c++/97197, PR c++/96229, PR fortran/95979,
      PR libstdc++/95322, PR libstdc++/97132, PR libstdc++/95788,
      PR tree-optimization/97081, PR tree-optimization/97456,
      PR c++/95132, PR c++/96241.
  * Also enable the extra checking on amd64, arm64, ppc64el, s390x, and don't
    strip the executables.  This will be reverted within a few weeks, please
    don't send bug reports about that.
  * Mark libgcc-sN with XB-Important/Protected: yes. Addresses: #972936.
