@@ -1335,6 +1335,11 @@ ifneq (,$(filter $(DEB_TARGET_ARCH),$(backtrace_no_archs)))
   with_backtrace :=
 endif
 
+strip_sanitizer =
+ifneq (,$(filter $(distrelease),jessie stretch buster precise xenial bionic focal groovy))
+  strip_sanitizer = yes
+endif
+
 # asan / sanitizer --------------------
 with_asan :=
 with_asan := $(call envfilt, asan, , , $(with_asan))
