@@ -16,8 +16,10 @@ gcc-11 (11-20201126-1) UNRELEASED; urgency=medium
   * Add conflicts with binary packages built from gcc-10.
   * Build libhwasan (AArch64 only).
   * Don't configure with --enable-checking=extra,rtl on 32bit archs.
+  * Don't strip the sanitizer libraries, these are only used for debugging.
+    LP: #1894166.
 
- -- Matthias Klose <doko@debian.org>  Thu, 26 Nov 2020 13:41:11 +0100
+ -- Matthias Klose <doko@debian.org>  Thu, 26 Nov 2020 18:09:53 +0100
 
 gcc-10 (10.2.0-17) unstable; urgency=medium
 
